# Triton

./: CMakeLists.txt  Doxyfile
ollvm/: 1.py  2.py
samples/ollvm/: crackme_xor_sub_fla_bcf  test1  test1.c  test2
src/examples/cpp/: code_python.cpp
src/libtriton/: CMakeLists.txt
src/libtriton/api/: api.cpp
src/libtriton/arch/aarch64/: aarch64Cpu.cpp  aarch64Semantics.cpp
src/libtriton/arch/x86/: x8664Cpu.cpp  x86Cpu.cpp
src/libtriton/bindings/python/: CMakeLists.txt  init.cpp  init.hpp
src/libtriton/bindings/python/modules/: tritonCallbacks.cpp
src/libtriton/bindings/python/objects/: pyAstNode.cpp  pyMemory.cpp
src/libtriton/engines/symbolic/: symbolicEngine.cpp  symbolicOptimization.cpp  symbolicSimplification.cpp
src/libtriton/includes/: api.hpp  smt2lib.hpp  smt2libPythonVariable.hpp  smt2libPythonVisitor.hpp  smt2libVisitor.hpp  symbolicSimplification.hpp
src/libtriton/includes/triton/: tritonTypes.hpp
src/libtriton/smt2lib/: pythonVariable.cpp  pythonVisitor.cpp
